Fix nested list collapse indicators

--- a/theme.css
+++ b/theme.css
@@ -238,7 +238,7 @@ body:is(.theme-dark, .theme-light) {
   padding-right: .45rem;
 }
 .markdown-source-view.mod-cm6 .cm-line:not(.cm-active):not(.HyperMD-header):not(.HyperMD-task-line, .HyperMD-list-line-1) .cm-fold-indicator .collapse-indicator {
-  padding-right: 0;
+  padding-right: .75rem;
 }
 div ul.has-list-bullet ul.has-list-bullet .collapse-indicator {
   margin-left: -2.75rem;
